# ft5009-assignment2

./: README.md  main.py  pyproject.toml
data/: listing_status.parquet
notebook/: end-to-end.ipynb  scratchpad.ipynb
src/: config.py  plotting.py  util.py
src/data/loaders/: __init__.py  base_loader.py  ff_loader.py  yf_loader.py
src/data/loaders/deprecated/: alpha_vantage_loader.py
src/data/metrics/: __init__.py  annualized_metrics_calculator.py
src/data/processing/: __init__.py  data_processor.py
src/index/: __init__.py  index_builder.py
src/model/: __init__.py  asset_pricing.py
src/portfolio/: __init__.py  portfolio_optimizer.py
