[project]
name = "ft5009-assignment2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.30.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodel",
    "yfinance>=0.2.66",
]
